# cppCAS

./: .clang-format  CMakeLists.txt  README.md  REFERENCES.md
src/: CMakeLists.txt
src/algebra/: CMakeLists.txt
src/algebra/sets/: CMakeLists.txt  finite_set.cpp  finite_set.hpp  infinite_set.cpp  infinite_set.hpp  set.hpp
src/cli/: CMakeLists.txt
src/core/nodes/: CMakeLists.txt  node.hpp  power.cpp
src/core/nodes/expressions/: CMakeLists.txt  absolute_value.cpp  absolute_value.hpp  addition.cpp  addition.hpp  cos.cpp  cos.hpp  differential.cpp  differential.hpp  division.cpp  division.hpp  expression.cpp  expression.hpp  integral.cpp  integral.hpp  modulus.cpp  modulus.hpp  multi_node.cpp  multi_node.hpp  multiplication.cpp  multiplication.hpp  opposite.cpp  opposite.hpp  power.cpp  power.hpp  sin.cpp  sin.hpp  tan.cpp  tan.hpp
src/core/nodes/expressions/values/: CMakeLists.txt  complex.cpp  complex.hpp  constant.cpp  constant.hpp  imaginary.cpp  imaginary.hpp  integer.cpp  integer.hpp  natural.cpp  natural.hpp  rational.cpp  rational.hpp  real.cpp  real.hpp  unknown.cpp  unknown.hpp  value.cpp  value.hpp
src/core/nodes/values/: value.cpp
src/devcli/: CMakeLists.txt  main.cpp
src/exceptions/: CMakeLists.txt  todo.hpp
src/nodes/: CMakeLists.txt  node.cpp  node.hpp  power.hpp
src/nodes/values/: value.hpp
src/parser/: CMakeLists.txt  lexer.cpp  lexer.hpp  parse_tree.cpp  parse_tree.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  token_type.hpp  tokens_library.cpp  tokens_library.hpp
tests/: CMakeLists.txt  test_nodes.cpp
